@@ -1,5 +1,14 @@
 2015-02-17  Jose E. Marchesi  <jose.marchesi@oracle.com>
 
+	* probe.c (compute_probe_arg): Moved from stap-probe.c
+	(compile_probe_arg): Likewise.
+	(probe_funcs): Likewise.
+	* stap-probe.c (compute_probe_arg): Moved to probe.c.
+	(compile_probe_arg): Likewise.
+	(probe_funcs): Likewise.
+
+2015-02-17  Jose E. Marchesi  <jose.marchesi@oracle.com>
+
 	* probe.c (print_ui_out_not_applicables): New function.
 	(exists_probe_with_pops): Likewise.
 	(info_probes_for_ops): Do not include column headers for probe
